# mattermost-enterprise-arm

./: .gitignore  README.md  build.sh  docker-compose.yml.local  mattermost-release.txt
.github/: dependabot.yml
.github/workflows/: check-mattermost.yml  docker.yml  release.yml
app/: Dockerfile  entrypoint.sh
telemetry-server/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml
telemetry-server/grafana/dashboards/: telemetry.json
telemetry-server/grafana/provisioning/dashboards/: dashboard.yml
telemetry-server/grafana/provisioning/datasources/: datasource.yml
telemetry-server/src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs
telemetry-server/tests/: integration_test.rs
